[package]
name = "bbbot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
fast_html2md = "0.0.48"
poise = "0.6.1"
quick-xml = "0.38.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
shuttle-runtime = "0.56.0"
shuttle-serenity = "0.56.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
